# numfmt-rs

./: Cargo.toml  build.rs  justfile
.config/: nextest.toml
.github/workflows/: ci.yml
docs/: index.html
src/: constants.rs  lib.rs  typst_plugin.rs  wasm.rs
src/formatter/: code_to_locale.json  error.rs  general.rs  locale.rs  locales.json  math.rs  mod.rs  options.rs  pad.rs  run_part.rs  serial.rs  to_ymd.rs  value.rs
src/parser/: error.rs  mod.rs  model.rs  pattern.rs  section.rs  tokenizer.rs
tests/: comprehensive_parse_test.rs  export_parse_results.rs  formatter_tests.rs  generated_tests.rs  parser_tests.rs
tests/fixtures/numfmt/: formats.json
