[package]
name = "numfmt-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
winnow = "0.7.13"
bitflags = "2.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
num-bigint = "0.4.6"
num-traits = "0.2.19"
thiserror = "2.0.17"
hotpath = { version = "0.5.2", optional = true }

[build-dependencies]
serde_json = "1.0.145"
